2023-07-14T00:53:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5549312842 # 1721
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
* notice: last 14d: unq all: 31 62
* notice: prev accum: outdated-unq outdated-all / unq all: 1377 4777 / 1417 4842
* notice: next accum: outdated-unq outdated-all / unq all: 1379 4780 / 1417 4842
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-29] / []

2023-07-13T16:11:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5545398946 # 1720
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 31 63
* notice: prev accum: outdated-unq outdated-all / unq all: 1377 4777 / 1413 4834
* notice: next accum: outdated-unq outdated-all / unq all: 1377 4777 / 1417 4842
* notice: prev exec diff / last date diff / accum: unq all: +4 +8 -1 -1 / +13 +23 -0 -0 / 13 23
* notice: removed / changed dates: [] / [2023-06-29 2023-07-13]

2023-07-13T08:11:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5540676467 # 1719
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 28 56
* notice: prev accum: outdated-unq outdated-all / unq all: 1377 4777 / 1404 4819
* notice: next accum: outdated-unq outdated-all / unq all: 1377 4777 / 1413 4834
* notice: prev exec diff / last date diff / accum: unq all: +9 +15 -0 -1 / +9 +15 -0 -0 / 9 15
* notice: removed / changed dates: [] / [2023-06-29 2023-07-13]

2023-07-13T00:54:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5537894567 # 1718