@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-01T00:57:27Z",
-  "count" : 3,
+  "timestamp" : "2023-07-14T08:11:15Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
