@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-14T00:53:25Z",
+  "timestamp" : "2023-07-14T08:11:15Z",
   "count_outdated" : 4780,
   "uniques_outdated" : 1379,
-  "count" : 4842,
-  "uniques" : 1417,
+  "count" : 4844,
+  "uniques" : 1419,
   "clones" : [
     {
       "timestamp": "2023-06-30T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -103,6 +103,15 @@
       "uniques": 13,
       "uniques_minmax": [ 9, 13 ],
       "uniques_decinc": [ 0, 13 ]
+    },
+    {
+      "timestamp": "2023-07-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
