@@ -1,10 +1,10 @@
 {
-  "count": 62,
-  "uniques": 31,
+  "count": 63,
+  "uniques": 32,
   "clones": [
     {
       "timestamp": "2023-06-30T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -56,6 +56,11 @@
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 23,
       "uniques": 13
+    },
+    {
+      "timestamp": "2023-07-14T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
