@@ -1,3 +1,12 @@
+2023-07-14T08:11:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5551960174 # 1722
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
+* notice: last 14d: unq all: 32 63
+* notice: prev accum: outdated-unq outdated-all / unq all: 1379 4780 / 1417 4842
+* notice: next accum: outdated-unq outdated-all / unq all: 1379 4780 / 1419 4844
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-06-30 2023-07-14]
+
 2023-07-14T00:53:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5549312842 # 1721
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
